# reranking

./: .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py  test_multiprocessing.ipynb
.github/workflows/: pre-commit.yml  pytest.yml
examples/: notebook.ipynb  usage_example.ipynb
reranking/: __init__.py  algs.py  metrics.py  reranker.py
tests/: README.md  test_algs.py  test_metrics.py  test_reranker.py
tests/utils/: fixture.py
