[tool.poetry]
authors = ["Longhao Yuan"]
description = "Implementation of paper: Fairness-Aware Ranking in Search & Recommendation Systems with Application to LinkedIn Talent Search"
license = "MIT"
name = "reranking"
version = "0.4.0"

[tool.poetry.dependencies]
python = ">=3.8.0,<3.11.0"
numpy = "^1.21.4"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
pytest = "^7.1.2"


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.mypy]
platform = "linux"
plugins = ["numpy.typing.mypy_plugin"]
python_version = 3.9

show_column_numbers = true

follow_imports = "normal"

# suppress errors about unsatisfied imports
ignore_missing_imports = true

# be strict
disallow_untyped_calls = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

# The following are off by default.  Flip them on if you feel
# adventurous.
check_untyped_defs = true
disallow_untyped_defs = true

# No incremental mode
cache_dir = "/dev/null"
